OpenRepGrid release versions at http://cran.r-project.org/.

Here technical changes are documented. See NEWS for a description of changes in release versions.

OpenRepGrid 0.1.9 (opened 2013-06-13) ----------------------------------------


OpenRepGrid 0.1.8 (2013-06-13) ----------------------------------------
  * importTxt: ? can be used to define missing values in ratings 
  * importGridstat can now import multigrid files
  * bug fix in importTxt: negative values are read in again


OpenRepGrid 0.1.7 (2013-05-26) ----------------------------------------
  * settings function added. Settings can now be modified, saved and loaded
  * print functions for most grid indexes added, former output argument no longer exists
  * functions by topic overview documentation added
  * bindConstructs can now take many grids and/or lists of grids as arguments. Element names are now matched and reordered automatically
  * '+' can now be used to concatenated two grids or list of grids
  * importExcel function added
  * importTxt: ratings and range can now have an arbitrary number of blanks or tabs between the values. The characters - (minus) and ? (question mark) are read in as missing values (NA). The file extensions .TXT (capitals) is now recognized
  * clusterBoot added:implementation of pvclust functions


OpenRepGrid 0.1.6 (2012-04-05) ----------------------------------------
  * migrating code from roxygen to roxygen2
  * fixed bug in calcCoordsBorders


OpenRepGrid 0.1.5 (2011-17-07) ----------------------------------------
  * method dim to return size of a grid. A simple wrapper around getNoOfConstructs and getNoOfElements
  * package description updated
  * prob argument in distanceXXX functions added
  * bug in makeRepgrid corrected: ratings now read by row


OpenRepGrid 0.1.4 (2011-05-31) ----------------------------------------
  
  * demo added
  * bug corrected in importScivesco
  * changed package description