@@ -7,7 +7,7 @@ Type: Package
 LazyLoad: yes
 Author: Mark Heckmann
 Description: Tools to analyse repertory grid data
-Version: 0.1.8
+Version: 0.1.9
 Date: 2013-06-13
 Depends:
     methods,
